# embeddings-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  build.rs  pyproject.toml  start_local.ps1
.cargo/: config.toml
.github/: deployment.yaml
.github/workflows/: deploy.yml
docs/: README.md  api-reference.md  architecture.md  deployment.md  index.md  setup.md
infra/grpc/: server.py
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
proto/: embeddings.proto  embeddings_pb2.py  embeddings_pb2_grpc.py
scripts/: deploy.sh
src/: config.rs  error.rs  grpc_server.rs  lib.rs  main.rs
src/api/: falcordb.rs  generate.rs  generate_test.rs  graphiti.rs  health.rs  mod.rs  neo4j.rs  search.rs
src/core/: config.rs  error.rs  kafka.rs  mod.rs  vector_search.rs
src/events/: mod.rs
src/generators/: batch.rs  mod.rs  streaming.rs
src/infra/: kafka_worker.rs  mod.rs
src/infra/events/: consumer.rs  episode.rs  events.rs  mod.rs  producer.rs  topics.rs
src/infra/middleware/: auth.rs  axum_auth.rs  axum_rate_limit.rs  circuit_breaker.rs  mod.rs  rate_limiting.rs  security_headers.rs  zero_trust.rs
src/models/: fastembed.rs  manager.rs  mod.rs  models.rs  ollama.rs  openai.rs  sentence_transformers.rs
src/storage/: batch_insert_atomicity_test.rs  embedding_dimension_test.rs  falcordb_client.rs  falcordb_client_connection_test.rs  mod.rs  neo4j.rs  postgres.rs  redis.rs  vector_chunk_schema_test.rs  vector_storage_metrics_test.rs  vector_storage_roundtrip_test.rs
tests/: api_test.rs
