[package]
name = "embeddings-service"
version = "0.1.0"
edition = "2021"
description = "Embedding generation service for ConFuse platform — generates vectors via Kafka for unified-processor to store in FalkorDB"
license = "Proprietary"
authors = ["ConFuse Team"]



[lib]
name = "embeddings_service"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "embeddings-service-bin"
path = "src/main.rs"

[dependencies]
confuse-common = { git = "https://github.com/KogSector/confuse-common.git", features = ["axum-support", "kafka"] }

# Kafka for event streaming (SSL disabled for Windows compatibility)
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json"] }


# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
lazy_static = "1.4"
once_cell = "1.18"

# Vector operations
ndarray = "0.15"

# Metrics
prometheus = "0.13"
fastembed = "5.15.0"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
