[package]
name = "embeddings-service"
version = "0.1.0"
edition = "2021"
description = "Embedding generation service for ConFuse platform - generates vectors via Kafka for unified-processor to store in FalkorDB"
license = "Proprietary"
authors = ["ConFuse Team"]



[lib]
name = "embeddings_service"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "embeddings-service-bin"
path = "src/main.rs"
[dependencies]
# (Removed confuse-common dependencies)

rdkafka = { version = "0.39.0", features = ["cmake-build", "ssl-vendored"] }

# Async framework
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
futures-util = "0.3.32"



# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"

# Configuration
config = "0.15.24"

# Utilities
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
async-trait = "0.1.89"
dotenvy = "0.15.7"

# HTTP client (for Ollama)
reqwest = { version = "0.13.4", features = ["json"] }


# Concurrency
dashmap = "7.0.0-rc2"
parking_lot = "0.12.5"
lazy_static = "1.5.0"


# Vector operations
ndarray = "0.17.2"

# Metrics
prometheus = "0.14.0"
[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3.27.0"
proptest = "1.11.0"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
