[project]
name = "embeddings-service"
version = "0.1.0"
description = "Embedding generation service for ConFuse platform"
requires-python = ">=3.14"
dependencies = [
    "sentence-transformers>=3.3.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["maturin>=1.10.0,<2.0"]
build-backend = "maturin"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
